--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "cookie-parser": "^1.4.6",
         "ejs": "^3.1.10",
         "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
         "mariadb": "^3.3.1",
         "nodemon": "^3.1.4",
         "request": "^2.88.2"
