--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "license": "Apache-2.0",
     "scripts": {
         "start": "node src/app.js",
-        "dev": "nodemon src/app.js"
+        "dev": "nodemon src/app.js",
+        "front": "nodemon src/front.js"
     },
     "dependencies": {
         "ejs": "^3.1.10",
@@ -16,5 +17,6 @@
         "mariadb": "^3.3.1",
         "nodemon": "^3.1.4",
         "request": "^2.88.2"
-    }
+    },
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
