--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "license": "Apache-2.0",
     "scripts": {
         "start": "node src/app.js",
-        "dev": "nodemon src/app.js"
+        "dev": "nodemon src/app.js",
+        "front": "nodemon src/front.js"
     },
     "dependencies": {
         "cookie-parser": "^1.4.6",
+        "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
